Fix broken layout for previous version

--- a/style.scss
+++ b/style.scss
@@ -23,14 +23,12 @@ body {
   color: $darkGray;
 }
 
-/*
-.container {
+#blog .container {
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
 }
-*/
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
